--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 /img/test-img-road_amaro.psd
+/img/test-img-sky.jpg
+/img/test-img-sky-2.jpg
+/img/test-img-sky-3.jpg
+/img/test-img-building.jpg
+/img/walden-sample.png
